opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_python"
bug-reports: "https://github.com/janestreet/ppx_python/issues"
dev-repo: "git+https://github.com/janestreet/ppx_python.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_python/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "base"
  "ppx_base"
  "dune"     {>= "2.0.0"}
  "ppxlib"   {>= "0.28.0"}
  "pyml"     {>= "20211015"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "[@@deriving] plugin to generate Python conversion functions"
description: "
Part of the Jane Street's PPX rewriters collection.
"
